<resources>
    <string name="app_name">Basic Chess Endgames</string>
    <string name="exercise_kq_k">King+Queen/King</string>
    <string name="exercise_krr_k">King+2Rooks/King</string>
    <string name="exercise_kbb_k">King+2Bishops/King</string>
    <string name="illegal_move">Illegal move !</string>
    <string name="promotion_chooser_title">Choosing the promotion piece</string>
    <string name="promotion_chooser_knight_button">Knight button</string>
    <string name="promotion_chooser_bishop_button">Bishop button</string>
    <string name="promotion_chooser_rook_button">Rook button</string>
    <string name="promotion_chooser_queen_button">Queen button</string>
    <string name="checkmate">Checkmate !</string>
    <string name="stalemate">Stalemate !</string>
    <string name="fiftyMoveDraw">Draw by the 50 moves rule !</string>
    <string name="white_play_for_mate">White play for mate</string>
    <string name="black_play_for_mate">Black play for mate</string>
    <string name="should_be_draw">It should be draw</string>
    <string name="exercise_kr_k">King+Rook/King</string>
    <string name="position_generation_error">Failed to generate position ! Please retry.</string>
    <string name="restarting_exercise_alert_title">Restart exercise ?</string>
    <string name="restarting_exercise_alert_message">About to restart exercise : are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_exercise_alert_title">New exercise</string>
    <string name="new_exercise_alert_message">About to start a new exercise : are you sure ?</string>
    <string name="empty_string" />
    <string name="quit_exercise_confirmation_title">Quit current exercise ?</string>
    <string name="quit_exercise_confirmation_message">Are you sure you want to quit current exercise ?</string>
    <string name="back_in_history">Back in history</string>
    <string name="forward_in_history">Forward in history</string>
    <string name="help">
[TAB]Generates basic chess endgames and let you play them again computer (at its best level).[CR][CR][CR]


[TAB]First, you have to select a chess endgame kind in the menu screen : when the endgame is in a green line you have to win, and
        when the endgame is on a orange line you have to draw.[CR]
        [TAB]Then you will get into the playing screen,
with a random position based on the endgame you chose. The color you have is also determined randomly.
You are given your goal : knowing you always start the game.[CR][CR][CR]



[TAB]You move a piece with the Drag And Drop interaction. There are also lines "around your finger",
in order to indicate more
the cell where you are going to leave the piece : which can be very useful if you are on a small device.[CR]
[TAB]Whenever the game is finished, you have the possibility to review moves (either by touching a move,
or by using the history arrow buttons).[CR][CR]

[TAB]You also have three buttons, actives whatever the game state, which let you respectively
reverse the board, restart the last generated position or generate a new position for the same kind
of endgame.[CR][CR]


[TAB]You can find the project files at https://goo.gl/KDKig0.[CR][CR]


[TAB]Developed by Laurent Bernabé in 2017. This project use adapted stockfish 8 chess engine(https://goo.gl/ABv2wS),
        source code of chessLib forked by Laurent Bernabé
        (https://github.com/loloof64/chesslib),
        the FreeSerif ttf font (https://fr.fonts2u.com/free-serif.police)
        and some images from Wikimedia Commons (https://goo.gl/DPdkMw).
</string>
    <string name="action_help">Help</string>
    <string name="position_repetitions_draw">Draw by threefold repetition !</string>
    <string name="reverse_board">Reverse board</string>
    <string name="restart_exercise">Restart exercise</string>
    <string name="new_exercise">New exercise</string>
    <string name="exercise_kp_k_I">King+Pawn/King (I)</string>
    <string name="exercise_kp_k_II">King+Pawn/King (II)</string>
    <string name="missing_material_draw">Draw by missing material !</string>
    <string name="white_play_for_win">White play for win.</string>
    <string name="black_play_for_win">Black play for win.</string>
    <string name="exercise_kppp_kppp">King+3Pawns/King+3Pawns</string>
    <string name="loading_stockfish">Loading Stockfish engine</string>
    <string name="exercise_knb_k">King+Knight+Bishop/King</string>
    <string name="title_activity_position_generator_editor">Position Generator Editor</string>
    <string name="player_king_constraints">player king constraints</string>
    <string name="computer_king_constraints">computer king constraints</string>
    <string name="other_pieces_count_constraints">other pieces count</string>
    <string name="other_pieces_mutual_constraints">other pieces mutual constraints</string>
    <string name="other_pieces_indexed_constraints">other pieces indexed constraints</string>
    <string name="other_pieces_global_constraints">other pieces global constraints</string>
    <string name="kings_mutual_constraints">kings mutual constraints</string>
    <string name="tab_title_predefined_exercise">Predefined</string>
    <string name="tab_title_custom_exercise">Custom</string>
    <string name="action_save_generator">Save all scripts</string>
    <string name="action_cancel_generator">Cancel all scripts</string>
    <string name="constraint_script">Constraint script</string>
    <string name="check_constraint">Check</string>
    <string name="script_valid">Script is valid.</string>
    <string name="invalid_script">Invalid script !</string>
    <string name="no_viable_alt_exception">Entry %s does not follow any rule (line %s: character number %s).</string>
    <string name="input_mismatch_exception">Input mismatch at line %s: character number %s. Expected %s but got %s .</string>
    <string name="parser_unrecognized_symbol">Unrecognized element : \'%s\' .</string>
    <string name="parser_variable_not_affected">Variable \'%s\' used before defining it !</string>
    <string name="parser_overriding_predefined_variable">Overriding predefined variable %s !</string>
    <string name="misc_parse_error">Miscellaneous script error.</string>
    <string name="no_antlr4_token">[no_token]</string>
    <string name="antlr4_eof">EndOfFile</string>
    <string name="antlr4_unknown_input">Unknown input</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="parse_error_dialog_title">Script error for %s</string>
    <string name="menu_actions">Actions</string>
    <string name="empty_script_error">An empty script will simply be ignored during position generation process.</string>
    <string name="script_errors">Script errors</string>
    <string name="correct_scripts_errors_first">Please, first correct script(s) error(s).</string>
    <string name="title_output_script_file_name">Output script file name</string>
    <string name="message_output_script_file_name">Please set output script file name</string>
    <string name="could_not_save_file">Failed to save file !\nMaybe you should try with another file name.</string>
    <string name="no_filename_given">Cancelled as no file name given.</string>
    <string name="overwrite_file_prompt_title">Overwrite file ?</string>
    <string name="overwrite_file_prompt_message">Overwrite file %s ?</string>
    <string name="confirm_cancel_script_editing_title">Confirm script editing cancellation ?</string>
    <string name="confirm_cancel_script_editing_message">Do you really want to quit script editing ?</string>
    <string name="result_should_be_draw">Result should be draw</string>
    <string name="theoretic_result_option">Theoretic result</string>
    <string name="action_menu_add_exercise">Add file</string>
    <string name="action_menu_add_folder">Add folder</string>
    <string name="new_folder_creation">New folder creation</string>
    <string name="folder_name_prompt">Folder name :</string>
    <string name="empty_folder_name">Empty folder name : cancellation !</string>
    <string name="folder_creation_error">Folder creation error</string>
    <string name="faced_folder_creation_restriction">Faced restrictions when trying to create folder !</string>
    <string name="description_element_type">Element type (file/folder)</string>
    <string name="exercise_loading_error">Exercise loading error</string>
    <string name="could_not_load_file">Failed to load exercise %s !</string>
    <string name="folder_already_exists_title">Folder already exists</string>
    <string name="folder_already_exists_message">Folder %s already exists in current directory !</string>
    <string name="custom_exercise_edit">Edit</string>
    <string name="custom_exercise_delete">Delete</string>
    <string name="button_add_piece_kind_count">Add</string>
    <string name="delete_piece_kind_count">Delete piece count from pieces to add.</string>
    <string name="piece_kind_already_in_list">Already set up a count for this piece/owner configuration !</string>
    <string name="adding_too_many_queens">A player cannot have more than 9 queens on a board !</string>
    <string name="adding_too_many_pawns">A player cannot have more than 8 pawns on a board !</string>
    <string name="adding_too_many_pieces">A player cannot have more than 16 pieces on a board (including king) !</string>
    <string name="confirm_delete_piece_kind_count_title">Confirm deletion ?</string>
    <string name="confirm_delete_piece_kind_count_message">Confirm deletion for %s ? (Some scripts may be associated with this type)</string>
    <string name="update_constraint">Update</string>
    <string name="updated_script">Updated script for this piece kind.</string>
    <string name="other_pieces_global_constraints_script_error_title">Other pieces global constraints (%s)</string>
    <string name="other_pieces_mutual_constraints_script_error_title">Other pieces mutual constraints (%s)</string>
    <string name="other_pieces_indexed_constraints_script_error_title">Other pieces indexed constraints (%s)</string>
    <string name="class_cast_exception_error_dialog_message">Please check that you don\'t use integer expression instead of boolean expression, and vice-versa.</string>
    <string-array name="piece_kind_count_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="player_computer_spinner">
        <item>Player</item>
        <item>Computer</item>
    </string-array>
    <string-array name="piece_type_spinner">
        <item>Pawn</item>
        <item>Knight</item>
        <item>Bishop</item>
        <item>Rook</item>
        <item>Queen</item>
    </string-array>
</resources>
