<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        android:text="@string/result_should_be_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/should_result_be_draw_buttons_group"
        android:checkedButton="@id/result_should_not_be_draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/result_should_not_be_draw_button"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/result_should_be_draw_button"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>