<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
>

    <ImageButton
            android:id="@+id/promotion_chooser_queen_button"
            android:layout_width="@dimen/promotion_chooser_button_size"
            android:layout_height="@dimen/promotion_chooser_button_size"
            android:layout_margin="@dimen/promotion_chooser_button_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/promotion_chooser_queen_button"
    />

    <ImageButton
            android:id="@+id/promotion_chooser_rook_button"
            android:layout_width="@dimen/promotion_chooser_button_size"
            android:layout_height="@dimen/promotion_chooser_button_size"
            android:layout_margin="@dimen/promotion_chooser_button_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/promotion_chooser_rook_button"
    />

    <ImageButton
            android:id="@+id/promotion_chooser_bishop_button"
            android:layout_width="@dimen/promotion_chooser_button_size"
            android:layout_height="@dimen/promotion_chooser_button_size"
            android:layout_margin="@dimen/promotion_chooser_button_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/promotion_chooser_bishop_button"
    />

    <ImageButton
            android:id="@+id/promotion_chooser_knight_button"
            android:layout_width="@dimen/promotion_chooser_button_size"
            android:layout_height="@dimen/promotion_chooser_button_size"
            android:layout_margin="@dimen/promotion_chooser_button_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/promotion_chooser_knight_button"
    />

</LinearLayout>